<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ru.agent</groupId>
   <artifactId>corporate.pom</artifactId>

   <version>3.15-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>corporate.pom</name>
   <description>Meta information</description>

   <properties>

    <!--resource files encoding-->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <!--that's default version of spring-->
    <spring.version>3.1.2.RELEASE</spring.version>

    <!--Spring Security Version-->
    <spring.security.version>3.1.2.RELEASE</spring.security.version>

    <servlet-api.version>2.5</servlet-api.version>

    <commons.lang.version>2.6</commons.lang.version>

    <slf4j.version>1.7.1</slf4j.version>
    <log4j.version>1.2.16</log4j.version>

    <testng.version>5.7</testng.version>
    <hamcrest.version>1.2.1</hamcrest.version>

    <!--Need for Spring EL and Spring injection to work correctly-->
    <compiler.debug>true</compiler.debug>

    <!--Idea debugger starts very slow if false-->
    <compiler.optimize>true</compiler.optimize>
</properties>

<prerequisites>
    <maven>3.0.0</maven>
</prerequisites>

<build>
    <finalName>${project.artifactId}</finalName>
    <defaultGoal>package</defaultGoal>

    <plugins>
        <plugin>
            <artifactId>maven-idea-plugin</artifactId>
            <version>2.2</version>
            <!--Excluding Jetty runtime dir-->
            <configuration>
                <exclude>target/work</exclude>
            </configuration>
        </plugin>
    </plugins>

    <pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.6</version>
            </plugin>

            <plugin>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>1.2</version>
            </plugin>

            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
            </plugin>

            <plugin>
                <inherited>true</inherited>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>
                <configuration>
                    <source>7</source>
                    <target>7</target>
                    <optimize>${compiler.optimize}</optimize>
                    <debug>${compiler.debug}</debug>
                    <encoding>utf-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12.4</version>
                <configuration>
                    <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                    <forkMode>once</forkMode>
                    <argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=128m -XX:PermSize=32m</argLine>
                    <properties>
                        <property>
                            <name>suitename</name>
                            <value>UnitSuite-${project.artifactId}</value>
                        </property>
                    </properties>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
            </plugin>

            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addClasspath>true</addClasspath>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.3.2</version>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>1.3.1</version>
            </plugin>

        </plugins>
    </pluginManagement>
</build>

</project>
